# ttt

./: CHANGELOG.md  bun.lockb  package.json  tailwind.config.js  vite.config.ts
.github/.workflows/: main.yml  release.yml
.github/workflows/: release.yml
doc/: Protocol.md  broadcast_protocol.md
src/: App.css  App.tsx  Home.tsx  dev-list.tsx  globals.css  main.tsx  nav.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/cmds/: broadcast.rs  mod.rs  mqtt.rs  qr_ac.rs  serialport.rs
src-tauri/src/cmds/ble/: calc.rs  calc1.rs  calc3.rs  mod.rs  protocol.rs
src-tauri/src/protocol/: bytes_serializable.rs  mod.rs
src-tauri/src/protocol/command/: broadcast_scan.rs  device_command.rs  device_msg.rs  mod.rs  server_command.rs
src-tauri/src/protocol/command/base/: network.rs
src-tauri/src/protocol/command/device_command/: device_msg.rs  mod.rs
src-tauri/src/protocol/command/server_command/: broadcast_scan.rs  mod.rs  network_set.rs  reboot.rs  tcp_server_set.rs
src/components/: Beacon.tsx  EditModeControls.tsx  ItemEditor.tsx  LoadingSpinner.tsx  NodePanel.tsx  ReceiverNode.tsx  Warehouse.tsx  WarehouseScene.tsx
src/components/extension/: iput.tsx  multi-select.tsx
src/components/extension/tree-view/: index.tsx  tree-view-api.tsx
src/components/pages/: broadcast.tsx  serialport.tsx
src/components/pages/bluetooth/: context.ts  index.tsx  light-view.tsx  protocol.ts  tree-view.tsx
src/components/pages/broadcast/: dev-list.tsx  device.tsx  index.tsx
src/components/pages/qr_ac/: index.tsx
src/components/ui/: sheet.tsx  tree.tsx
src/lib/: utils.ts
src/pages/: quit_confirm.tsx  serialport.tsx  updater.tsx
src/pages/bluetooth/: beacon.tsx  ble_3d.tsx  const.tsx  context.ts  index.tsx  light-view.tsx  protocol.ts  status_ctr.tsx  tree-view.tsx  types.ts
src/pages/bluetooth/3d/: Beacon.tsx  BleScene.tsx  LightObject.tsx  ble_3d.tsx
src/pages/broadcast/: index.tsx
src/utils/: trilateration.ts
